readying new repo layout

--- a/notebooks/vi_preprocessing_new_data.ipynb
+++ b/notebooks/vi_preprocessing_new_data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preprocessing Second Batch of Songs"
+    "#### Preprocessing Second Batch of Songs"
    ]
   },
   {
@@ -4343,174 +4343,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df_ready = pd.read_csv('../data/interim/non_normalized_tracks_20190516.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df_ready = "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "column_dict = {i : merged_df_ready[i].dtype for i in merged_df_ready.columns}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'track_id': dtype('O'),\n",
-       " 'Song Title': dtype('O'),\n",
-       " 'Artist': dtype('O'),\n",
-       " 'artist_id': dtype('O'),\n",
-       " 'name': dtype('O'),\n",
-       " 'popularity': dtype('int64'),\n",
-       " 'followers': dtype('float64'),\n",
-       " 'artist_name': dtype('O'),\n",
-       " 'song_id': dtype('O'),\n",
-       " 'song_title': dtype('O'),\n",
-       " 'CID': dtype('float64'),\n",
-       " 'PID': dtype('float64'),\n",
-       " 'Title': dtype('O'),\n",
-       " 'Performer Name': dtype('O'),\n",
-       " 'WID': dtype('int64'),\n",
-       " 'Writer Name': dtype('O'),\n",
-       " 'IPI': dtype('float64'),\n",
-       " 'PRO': dtype('O'),\n",
-       " 'component_1': dtype('float64'),\n",
-       " 'component_2': dtype('float64'),\n",
-       " 'component_3': dtype('float64'),\n",
-       " 'component_4': dtype('float64'),\n",
-       " 'component_5': dtype('float64'),\n",
-       " 'component_6': dtype('float64'),\n",
-       " 'component_7': dtype('float64'),\n",
-       " 'component_8': dtype('float64'),\n",
-       " 'component_9': dtype('float64'),\n",
-       " 'component_10': dtype('float64'),\n",
-       " 'component_11': dtype('float64'),\n",
-       " 'component_12': dtype('float64'),\n",
-       " 'component_13': dtype('float64'),\n",
-       " 'component_14': dtype('float64'),\n",
-       " 'component_15': dtype('float64'),\n",
-       " 'component_16': dtype('float64'),\n",
-       " 'component_17': dtype('float64'),\n",
-       " 'component_18': dtype('float64'),\n",
-       " 'component_19': dtype('float64'),\n",
-       " 'component_20': dtype('float64'),\n",
-       " 'component_21': dtype('float64'),\n",
-       " 'component_22': dtype('float64'),\n",
-       " 'component_23': dtype('float64'),\n",
-       " 'component_24': dtype('float64'),\n",
-       " 'component_25': dtype('float64'),\n",
-       " 'component_26': dtype('float64'),\n",
-       " 'component_27': dtype('float64'),\n",
-       " 'component_28': dtype('float64'),\n",
-       " 'component_29': dtype('float64'),\n",
-       " 'component_30': dtype('float64'),\n",
-       " 'component_31': dtype('float64'),\n",
-       " 'component_32': dtype('float64'),\n",
-       " 'component_33': dtype('float64'),\n",
-       " 'component_34': dtype('float64'),\n",
-       " 'component_35': dtype('float64'),\n",
-       " 'component_36': dtype('float64'),\n",
-       " 'component_37': dtype('float64'),\n",
-       " 'component_38': dtype('float64'),\n",
-       " 'component_39': dtype('float64'),\n",
-       " 'component_40': dtype('float64'),\n",
-       " 'component_41': dtype('float64'),\n",
-       " 'component_42': dtype('float64'),\n",
-       " 'component_43': dtype('float64'),\n",
-       " 'component_44': dtype('float64'),\n",
-       " 'component_45': dtype('float64'),\n",
-       " 'component_46': dtype('float64'),\n",
-       " 'component_47': dtype('float64'),\n",
-       " 'component_48': dtype('float64'),\n",
-       " 'component_49': dtype('float64'),\n",
-       " 'component_50': dtype('float64'),\n",
-       " 'pm_0': dtype('float64'),\n",
-       " 'pm_1': dtype('float64'),\n",
-       " 'pm_2': dtype('float64'),\n",
-       " 'pm_3': dtype('float64'),\n",
-       " 'pm_4': dtype('float64'),\n",
-       " 'pm_5': dtype('float64'),\n",
-       " 'pm_6': dtype('float64'),\n",
-       " 'pm_7': dtype('float64'),\n",
-       " 'pm_8': dtype('float64'),\n",
-       " 'pm_9': dtype('float64'),\n",
-       " 'pm_10': dtype('float64'),\n",
-       " 'pm_11': dtype('float64'),\n",
-       " 'pv_0': dtype('float64'),\n",
-       " 'pv_1': dtype('float64'),\n",
-       " 'pv_2': dtype('float64'),\n",
-       " 'pv_3': dtype('float64'),\n",
-       " 'pv_4': dtype('float64'),\n",
-       " 'pv_5': dtype('float64'),\n",
-       " 'pv_6': dtype('float64'),\n",
-       " 'pv_7': dtype('float64'),\n",
-       " 'pv_8': dtype('float64'),\n",
-       " 'pv_9': dtype('float64'),\n",
-       " 'pv_10': dtype('float64'),\n",
-       " 'pv_11': dtype('float64'),\n",
-       " 'tm_0': dtype('float64'),\n",
-       " 'tm_1': dtype('float64'),\n",
-       " 'tm_2': dtype('float64'),\n",
-       " 'tm_3': dtype('float64'),\n",
-       " 'tm_4': dtype('float64'),\n",
-       " 'tm_5': dtype('float64'),\n",
-       " 'tm_6': dtype('float64'),\n",
-       " 'tm_7': dtype('float64'),\n",
-       " 'tm_8': dtype('float64'),\n",
-       " 'tm_9': dtype('float64'),\n",
-       " 'tm_10': dtype('float64'),\n",
-       " 'tm_11': dtype('float64'),\n",
-       " 'tv_0': dtype('float64'),\n",
-       " 'tv_1': dtype('float64'),\n",
-       " 'tv_2': dtype('float64'),\n",
-       " 'tv_3': dtype('float64'),\n",
-       " 'tv_4': dtype('float64'),\n",
-       " 'tv_5': dtype('float64'),\n",
-       " 'tv_6': dtype('float64'),\n",
-       " 'tv_7': dtype('float64'),\n",
-       " 'tv_8': dtype('float64'),\n",
-       " 'tv_9': dtype('float64'),\n",
-       " 'tv_10': dtype('float64'),\n",
-       " 'tv_11': dtype('float64'),\n",
-       " 'acousticness': dtype('float64'),\n",
-       " 'danceability': dtype('float64'),\n",
-       " 'duration_ms': dtype('int64'),\n",
-       " 'energy': dtype('float64'),\n",
-       " 'instrumentalness': dtype('float64'),\n",
-       " 'liveness': dtype('float64'),\n",
-       " 'loudness': dtype('float64'),\n",
-       " 'mode': dtype('int64'),\n",
-       " 'speechiness': dtype('float64'),\n",
-       " 'tempo': dtype('float64'),\n",
-       " 'valence': dtype('float64'),\n",
-       " 'key_7': dtype('int64'),\n",
-       " 'key_6': dtype('int64'),\n",
-       " 'key_8': dtype('int64'),\n",
-       " 'key_9': dtype('int64'),\n",
-       " 'key_2': dtype('int64'),\n",
-       " 'key_5': dtype('int64'),\n",
-       " 'key_10': dtype('int64'),\n",
-       " 'key_0': dtype('int64'),\n",
-       " 'key_11': dtype('int64'),\n",
-       " 'key_4': dtype('int64'),\n",
-       " 'key_1': dtype('int64'),\n",
-       " 'key_3': dtype('int64'),\n",
-       " 'time_signature_3': dtype('int64'),\n",
-       " 'time_signature_4': dtype('int64'),\n",
-       " 'time_signature_5': dtype('int64'),\n",
-       " 'time_signature_1': dtype('int64'),\n",
-       " 'time_signature_0': dtype('int64')}"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "column_dict"
    ]
   },
   {
@@ -4588,26 +4443,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/home/jovyan/Song_Index/notebooks/../data/matched_tracks_w_writers_20190504.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-8766210ec54b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     29\u001b[0m                                     \u001b[0;34m'Writer Name'\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m                                     \u001b[0;34m'IPI'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mInt32Dtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m                                     \u001b[0;34m'PRO'\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0;34m'category'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m                                     })\\\n\u001b[1;32m     33\u001b[0m                       \u001b[0;34m.\u001b[0m\u001b[0mrename\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'Unnamed: 0'\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0;34m'index'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/dask/dataframe/io/csv.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(urlpath, blocksize, collection, lineterminator, compression, sample, enforce, assume_missing, storage_options, include_path_column, **kwargs)\u001b[0m\n\u001b[1;32m    489\u001b[0m                            \u001b[0mstorage_options\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstorage_options\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    490\u001b[0m                            \u001b[0minclude_path_column\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minclude_path_column\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 491\u001b[0;31m                            **kwargs)\n\u001b[0m\u001b[1;32m    492\u001b[0m     read.__doc__ = READ_DOC_TEMPLATE.format(reader=reader_name,\n\u001b[1;32m    493\u001b[0m                                             file_type=file_type)\n",
-      "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/dask/dataframe/io/csv.py\u001b[0m in \u001b[0;36mread_pandas\u001b[0;34m(reader, urlpath, blocksize, collection, lineterminator, compression, sample, enforce, assume_missing, storage_options, include_path_column, **kwargs)\u001b[0m\n\u001b[1;32m    344\u001b[0m                        \u001b[0mcompression\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcompression\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    345\u001b[0m                        \u001b[0minclude_path\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minclude_path_column\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 346\u001b[0;31m                        **(storage_options or {}))\n\u001b[0m\u001b[1;32m    347\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    348\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0minclude_path_column\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/dask/bytes/core.py\u001b[0m in \u001b[0;36mread_bytes\u001b[0;34m(urlpath, delimiter, not_zero, blocksize, sample, compression, include_path, **kwargs)\u001b[0m\n\u001b[1;32m     99\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpaths\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    100\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 101\u001b[0;31m                 \u001b[0msize\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlogical_size\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcompression\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    102\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    103\u001b[0m                 raise ValueError(\"Cannot do chunked reads on files compressed \"\n",
-      "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/dask/bytes/core.py\u001b[0m in \u001b[0;36mlogical_size\u001b[0;34m(fs, path, compression)\u001b[0m\n\u001b[1;32m    528\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    529\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mcompression\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 530\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mfs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    531\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mcompression\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mseekable_files\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    532\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mOpenFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcompression\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcompression\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/dask/bytes/local.py\u001b[0m in \u001b[0;36msize\u001b[0;34m(self, path)\u001b[0m\n\u001b[1;32m     68\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m         \u001b[0;34m\"\"\"Size in bytes of the file at path\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 70\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_normalize_path\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mst_size\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     71\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_get_pyarrow_filesystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/jovyan/Song_Index/notebooks/../data/matched_tracks_w_writers_20190504.csv'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# see imports on 1f.\n",
     "# not even sure if I need anything outside of the `read_csv`\n",
@@ -4804,7 +4642,7 @@
     "                          'Writer Name',\n",
     "                          'IPI',\n",
     "                          'PRO'])\n",
-    "    grouped_vals_ddf = subset_ddf.groupby('WID').transform(lambda x: (x - x.mean()) / x.std())\n",
+    "    grouped_vals_ddf = subset_ddf.groupby('WID').transform(lambda x: (x - x.mean()) / x.std() if x.std() is not 0 else )\n",
     "    return grouped_vals_ddf"
    ]
   },
