refactoring mk_dataset

--- a/notebooks/vii_nearest_neighbors_model.ipynb
+++ b/notebooks/vii_nearest_neighbors_model.ipynb
@@ -1108,6 +1108,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../data/writer_count_dict_20190504.pkl', 'rb') as f:\n",
+    "    count_df_2 = pickle.load(f)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1116,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1146,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,20 +1165,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'writer_name': 'CARTER SHAWN  ',\n",
+       " 'ipi': '240089589',\n",
+       " 'top_matches': [(4692, 224),\n",
+       "  (3747, 30),\n",
+       "  (3772, 24),\n",
+       "  (4561, 23),\n",
+       "  (4754, 21),\n",
+       "  (5519, 20),\n",
+       "  (3729, 18),\n",
+       "  (5565, 15),\n",
+       "  (7091, 14),\n",
+       "  (4575, 14),\n",
+       "  (3835, 12),\n",
+       "  (16895, 12)]}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "top_12s[4692]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "writers = pd.read_csv('../data/writers.csv', index_col = 0)"
+    "writers = pd.read_csv('writers.csv', index_col = 0)"
    ]
   },
   {
