building models.py + pre run 8/25

--- a/notebooks/vii_nearest_neighbors_model.ipynb
+++ b/notebooks/vii_nearest_neighbors_model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1146,10 +1146,10 @@
     "    # add writer name and info to dictionary\n",
     "    for wid in top_12_dict:\n",
     "        if wid in writer_df['WID']:\n",
-    "            top_12_dict[wid]['writer_name']\\\n",
-    "            = writer_df['Writer Name'][writer_df['WID'] == wid].values[0]\n",
-    "            top_12_dict[wid]['ipi']\\\n",
-    "            = writer_df['IPI'][writer_df['WID'] == wid].values[0]\n",
+    "            top_12_dict[wid]['writer_name'] = writer_df['Writer Name']\\\n",
+    "                                                [writer_df['WID'] == wid].values[0]\n",
+    "            top_12_dict[wid]['ipi'] = writer_df['IPI']\\\n",
+    "                                        [writer_df['WID'] == wid].values[0]\n",
     "    \n",
     "    return top_12_dict"
    ]
@@ -1507,5 +1507,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
