updating modeling func

--- a/notebooks/vii_nearest_neighbors_model.ipynb
+++ b/notebooks/vii_nearest_neighbors_model.ipynb
@@ -24,7 +24,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "from sklearn.neighbors import NearestNeighbors, kneighbors_graph\n",
+    "from sklearn.neighbors import NearestNeighbors\n",
     "from sklearn.externals import joblib\n",
     "from scipy.spatial.distance import jaccard"
    ]
