--- a/notebooks/vi_preprocessing_new_data.ipynb
+++ b/notebooks/vi_preprocessing_new_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,9 +21,9 @@
     "import os\n",
     "import re\n",
     "\n",
-    "from deepmerge import always_merger\n",
+    "# from deepmerge import always_merger\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
+    "# import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
@@ -50,19 +50,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../data/new_tracks_20190103.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-ead6c338a088>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# all songs I attempted to pull\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'../data/new_tracks_20190103.json'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mnew_tracks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../data/new_tracks_20190103.json'"
+     ]
+    }
+   ],
    "source": [
     "# all songs I attempted to pull\n",
-    "# with open('../data/new_tracks_20190103.json', 'r') as f:\n",
-    "#     new_tracks = json.load(f)\n",
+    "with open('../data/new_tracks_20190103.json', 'r') as f:\n",
+    "    new_tracks = json.load(f)\n",
     "\n",
     "\n",
-    "# matched_songs = pd.read_csv('../data/matched_songs_20190209.csv', index_col = 0)\n",
-    "main_wfeats = pd.read_csv('../data/main_wfeats.csv', index_col = 0)\n",
-    "genres = pd.read_csv('../data/genres.csv', index_col = 0)\n",
-    "gs_lookup = pd.read_csv('../data/gsong_lookup.csv', index_col=0)"
+    "matched_songs = pd.read_csv('../data/matched_songs_20190209.csv', index_col = 0)\n",
+    "# main_wfeats = pd.read_csv('../data/main_wfeats.csv', index_col = 0)\n",
+    "# genres = pd.read_csv('../data/genres.csv', index_col = 0)\n",
+    "# gs_lookup = pd.read_csv('../data/gsong_lookup.csv', index_col=0)"
    ]
   },
   {
@@ -1364,13 +1376,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Note**: Added the `contrib_id` to account for individual contributions to works on 9/1/2019"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "matched_w_CID = matched_tracks_df.merge(cw_lookup,\n",
-    "                                        on='CID')"
+    "                                        on='CID')\n",
+    "matched_w_CID['contrib_id'] = matched_w_CID.index"
    ]
   },
   {
@@ -4891,5 +4911,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
