Refactoring models.py

--- a/notebooks/vii_nearest_neighbors_model_test.ipynb
+++ b/notebooks/vii_nearest_neighbors_model_test.ipynb
@@ -1635,7 +1635,12 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1778,5 +1783,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
