adding dev tools

--- a/notebooks/vi_preprocessing_new_data.ipynb
+++ b/notebooks/vi_preprocessing_new_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4326,26 +4326,24 @@
     "#     return integer_array([0, None], dtype=dtype)\n",
     "\n",
     "matched_w_writers = dd.read_csv('../data/matched_tracks_w_writers_20190504.csv',\n",
-    "                                dtype = {\n",
-    "                                    'track_id' : str,\n",
-    "                                    'Song Title' : str,\n",
-    "                                    'Artist' : str,\n",
-    "                                    'artist_id' : str,\n",
-    "                                    'name' : str,\n",
-    "                                    'popularity' : np.int8,\n",
-    "                                    'followers' : np.int32,\n",
-    "                                    'artist_name' : str,\n",
-    "                                    'song_id' : str,\n",
-    "                                    'song_title' : str,\n",
-    "                                    'CID' : np.int32,\n",
-    "                                    'PID' : np.int32,\n",
-    "                                    'Title': str,\n",
-    "                                    'Performer Name' : str,\n",
-    "                                    'WID' : np.int32,\n",
-    "                                    'Writer Name' : str,\n",
-    "                                    'IPI': pd.Int32Dtype(),\n",
-    "                                    'PRO' : 'category'\n",
-    "                                    })\\\n",
+    "                                dtype = {'track_id' : str,\n",
+    "                                         'Song Title' : str,\n",
+    "                                         'Artist' : str,\n",
+    "                                         'artist_id' : str,\n",
+    "                                         'name' : str,\n",
+    "                                         'popularity' : np.int8,\n",
+    "                                         'followers' : np.int32,\n",
+    "                                         'artist_name' : str,\n",
+    "                                         'song_id' : str,\n",
+    "                                         'song_title' : str,\n",
+    "                                         'CID' : np.int32,\n",
+    "                                         'PID' : np.int32,\n",
+    "                                         'Title': str,\n",
+    "                                         'Performer Name' : str,\n",
+    "                                         'WID' : np.int32,\n",
+    "                                         'Writer Name' : str,\n",
+    "                                         'IPI': pd.Int32Dtype(),\n",
+    "                                         'PRO' : 'category'})\\\n",
     "                      .rename(columns = {'Unnamed: 0' : 'index'})\\\n",
     "                      .set_index('index')"
    ]
@@ -4515,7 +4513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
